<resources>
    <string name="app_name">Izanami</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_or_create_your_account">Sign in or create your account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button_eye_description">Button to make the password visible</string>
    <string name="image_logo_description">App logo</string>
    <string name="confirm">OK</string>

    <string name="email_error_invalid">Email provided is invalid</string>
    <string name="email_error_missing_at">The "@" is missing</string>
    <string name="email_error_missing_dot">The "." is missing</string>
    <string name="password_error">Password provided is too short</string>
    <string name="sign_up_wait_message">We are processing your request</string>
    <string name="sign_up_wait_message_title">Wait a minute....</string>
    <string name="registration_screen_message">First let\'s finish your registration</string>
    <string name="name_placeholder">Name</string>
    <string name="last_name_placeholder">Last name</string>
    <string name="generic_server_error">Oops… some error happened. Try again.</string>
</resources>