<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".View.Activity.SignInAndSignUpActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_icon_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/image_logo_description"
            android:src="@drawable/ic_icon_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/text_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/app_name"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="@+id/image_icon_logo"
            app:layout_constraintStart_toStartOf="@+id/image_icon_logo"
            app:layout_constraintTop_toBottomOf="@+id/image_icon_logo" />

        <TextView
            android:id="@+id/text_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/sign_in_or_create_your_account"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_app_name" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/custom_edit_text"
            android:drawableEnd="@drawable/email_icon_selector"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|textImeMultiLine"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/variantColor"
            android:textColorHint="@color/hint"
            app:layout_constraintTop_toBottomOf="@+id/text_message" />

        <TextView
            android:id="@+id/text_email_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/montserrat_semibold"
            android:maxLines="1"
            android:textColor="@color/danger"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/edit_email"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:background="@drawable/custom_edit_text_two"
            android:drawableEnd="@drawable/password_icon_selector"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword|textImeMultiLine"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/variantColor"
            android:textColorHint="@color/hint"
            app:layout_constraintTop_toBottomOf="@+id/text_email_error" />

        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/montserrat_semibold"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="38dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" />

        <ImageView
            android:id="@+id/image_see_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_eye_description"
            android:paddingHorizontal="8dp"
            android:paddingTop="2dp"
            android:paddingBottom="8dp"
            android:src="@drawable/ic_eye"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" />


        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:backgroundTint="@color/variantColor"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" />

        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/forgot_password"
            android:textColor="@color/variantColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_sign_in" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/variantDark"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@+id/text_forgot_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>